Added Login Page

--- a/register/error.html
+++ b/register/error.html
@@ -4,10 +4,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>UoW Climbing Society Session Signup</title>
-        <link rel="stylesheet" href="resources/css/index.css">
+        <link rel="stylesheet" href="../resources/css/index.css">
     </head>
     <body>
-        <div id="error-main-section" class="all-round-shadow">
+        <div id="error-main-section" class="all-round-shadow section-white">
             <h1>An error occured</h1>
             <br>
             <h4 class="invalid-text" id="error-message"></h4>
