--- a/register/index.html
+++ b/register/index.html
@@ -4,15 +4,15 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>UoW Climbing Society Session Signup</title>
-        <link rel="stylesheet" href="resources/css/index.css">
+        <link rel="stylesheet" href="../resources/css/index.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     </head>
     <body>
-        <script src="./resources/js/index.js" defer></script>
+        <script src="../resources/js/index.js" defer></script>
         <div id="main-section" class="all-round-shadow">
             <div id="left-side">
                 <div id="title-section">
-                    <img src="/register/resources/images/society-logo.jpg" alt="society-logo" id="title-logo">
+                    <img src="/resources/images/society-logo.jpg" alt="society-logo" id="title-logo">
                     <h1>limbing</h1>
                 </div>
                 <div id="info-section">
