--- a/admin/index.html
+++ b/admin/index.html
@@ -17,10 +17,11 @@
                     <input type="text" id="username" name="username" required>
                     <label for="password">Password:</label>
                     <input type="password" id="password" name="password" required>
-                    <div style="display: flex; justify-content: center; align-items: center;">
+                    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                         <button type="submit" id="submit-button" class="submit-button">
                             <span id="submit-button-content">Login</span>
                         </button>
+                        <p id="response-text"></p>
                     </div>
                 </form>
             </div>
