--- a/register/index.html
+++ b/register/index.html
@@ -12,8 +12,8 @@
         <div id="main-section" class="all-round-shadow">
             <div id="left-side">
                 <div id="title-section">
-                    <img src="/resources/images/society-logo.jpg" alt="society-logo" id="title-logo">
-                    <h1>limbing</h1>
+                    <img src="/resources/images/society-logo.png" alt="society-logo" id="title-logo">
+                    <h1>Seat Signup</h1>
                 </div>
                 <div id="info-section">
                     <h4>Session Location: <span id="session-location">loc</span></h4>
